--- a/frontend/src/index.scss
+++ b/frontend/src/index.scss
@@ -100,9 +100,9 @@ ul {
     --accent: #f97316; // (미사용) 강조 색상
 
     /* ===== Status Colors (유지) ===== */
-    --success: #22c55e; // 성공 상태
-    --warning: #facc15; // 경고 상태
-    --danger: #ef4444; // 오류 텍스트
+    --success: #4A6B5D;
+    --warning: #D29A1D;
+    --danger: #B22222;
     --danger-hover: rgba(220, 53, 69, 0.8); // '삭제' 버튼 호버
     --info: #3b82f6; // 정보 상태
     --info-hover: rgba(86, 136, 204, 0.8); // '수정' 버튼 호버
